force-app/main/default/objects/Google_Auth__c/Google_Auth__c.object-meta.xml
<CustomObject>
    <label>Google Auth</label>
    <nameField>
        <label>Google Auth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Auths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>