force-app/main/default/objects/Google_Auth__c/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <label>Resource Id</label>
    <type>TextArea</type>
</CustomField>