force-app/main/default/objects/Google_Auth__c/fields/Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Name__c</fullName>
    <label>Token Name</label>
    <type>TextArea</type>
</CustomField>