force-app/main/default/objects/Google_Auth__c/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <label>Token Type</label>
    <type>TextArea</type>
</CustomField>