force-app/main/default/objects/Google_Auth__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <type>TextArea</type>
</CustomField>